<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true">

    </EditTextPreference>


    <!-- Entries are not visible from users, just constant values-->
    <!-- EntryValues are visible from users-->
    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/unit_entry"
        android:entryValues="@array/unit_values">


    </ListPreference>
</PreferenceScreen>